<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_marginBottom="8dp">

    <TextView
        android:id="@+id/tvStudentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_student_name"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvStudentDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_student_details"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvStudentGrades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/label_student_grades"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/btnEditStudent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_edit_student"
            android:backgroundTint="@color/green_primary_dark"
            android:layout_marginEnd="4dp" />

        <Button
            android:id="@+id/btnDeleteStudent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_delete_student"
            android:backgroundTint="@color/red"
            android:layout_marginStart="4dp" />
    </LinearLayout>

</LinearLayout>