<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:layout_marginBottom="8dp"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/tvGradeSubject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/label_subject"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvGradeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/label_grade"
        android:textStyle="bold"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnEditGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_edit"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/green_primary_dark"/>

    <Button
        android:id="@+id/btnDeleteGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_delete"
        android:backgroundTint="@color/red" />
</LinearLayout>