<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/_024"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:layout_marginBottom="16dp"
            android:textSize="30dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/btnRegisterStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerStudent"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/green_primary_dark"/>

        <Button
            android:id="@+id/btnRegisterNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerNote"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/green_primary_dark"/>

        <Button
            android:id="@+id/btnStudentList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seeStudentsNotes"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/green_primary_dark"/>


    </LinearLayout>

    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/green_primary_dark" />

</androidx.constraintlayout.widget.ConstraintLayout>